add image / fix app.js

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
       </ul>
     </nav>
     <div class="logo">
-        <p class="scroll"></p>
-        <p class="ichi"></p>
-        <p class="sa"></p>
+        <img src="images/pp.png" alt="ロゴマーク">
     </div>
   </div>
   <div class="__right">
