change slick move and scroll move

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="wrapper flex-sb">
   <div class="__left">
-    <h1>Page Present</h1>
+    <h1 class="top">Page Present</h1>
     <nav class="gnav">
       <ul class="fd">
         <li class="nav-item"><a href="#service">どんなサービス？<span class="-circle"></span></a></li>
@@ -28,8 +28,8 @@
         <li class="nav-item"><a href="#voice">お客様の声<span class="-circle"></span></a></li>
       </ul>
     </nav>
-    <div class="logo">
-        <img src="images/pp.png" alt="ロゴマーク">
+    <div class="logo top">
+        <a href="#"><img src="images/pp.png" alt="ロゴマーク"></a>
     </div>
   </div>
   <div class="__right">
@@ -380,7 +380,7 @@
     </div>     <!--voice//-->
   </div>    <!-- __right///////-->
 </div>
-<footer>
+<footer class="clearfix">
   <p class="footer-title">Page Present.Inc</p>
   <nav class="footernav">
     <ul class="flex-sa">
@@ -388,7 +388,8 @@
       <li><a href="#">プライバシーポリシー</a><span class="gray"></span></li>
     </ul>
   </nav>
-  <p class="footer__right">All Rights 2021 Reserved</p>
+  <p class="footer__right">&copy;&nbsp;All Rights 2021 Reserved</p>
+  <a href="https://storyset.com/people">Illustration by Freepik Storyset</a>
 </footer>
 </body>
 </html>
